--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-fastify": "^8.0.6",
+    "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/sharp": "^0.28.5",
+    "nanoid": "^3.1.25",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sharp": "^0.28.3",
     "typeorm": "^0.2.37"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
