--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
     "@types/sharp": "^0.28.5",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "nanoid": "^3.1.25",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
